# WashU-EVENT

./: .env.example  .gitignore  README.md  docker-compose.yml  package-lock.json  package.json  tailwind.config.ts
app/: globals.css  layout.tsx  page.tsx
app/api/calendar/events/: route.ts
app/api/chat/: route.ts
app/api/fit/detail/: route.ts
app/api/fit/summary/: route.ts
backend/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
backend/app/: config.py  main.py
backend/app/scheduling/: __init__.py  models.py  scheduler.py  task_category.py
backend/tests/: test_scheduler_equivalence.py
backend/tests/fixtures/: scheduler_cases.json
components/: BlueTaskPanel.tsx  CalendarApp.tsx  ChatPanel.tsx  DailyBriefing.tsx  EventModal.tsx  Sidebar.tsx  SignInScreen.tsx  TopBar.tsx  WeekView.tsx
docs/adr/: 0001-canvas-mock-server.md
lib/: actions.ts  auth.ts  blueTaskStore.ts  dates.ts  health.ts  localStore.ts  schedule.ts  scheduler.ts  taskCategory.ts  types.ts
mock_canvas/: .gitignore  Dockerfile  README.md  pyproject.toml
mock_canvas/app/: auth.py  failures.py  main.py  pagination.py  schemas.py
mock_canvas/app/data/: assignments.json  courses.json  loader.py  modules.json  quizzes.json
mock_canvas/app/data/syllabi/: cse332.html  engl101.html  hist201.html  math233.html  psych100b.html
mock_canvas/app/routes/: assignments.py  courses.py  modules.py  quizzes.py  users.py
mock_canvas/tests/: conftest.py  test_assignments.py  test_courses.py  test_failure_injection.py  test_pagination.py
scripts/: gen_scheduler_fixtures.ts
(+1 files in other folders)
